force-app/main/default/objects/Listing_Transfer_Request__c/Listing_Transfer_Request__c.object-meta.xml
<CustomObject>
    <label>Listing Transfer Request</label>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Listing Transfer Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Transfer Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>