force-app/main/default/objects/Listing_Transfer_Request__c/fields/CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>CanceledOn__c</fullName>
    <label>Canceled On</label>
    <type>Date</type>
</CustomField>