force-app/main/default/objects/Listing_Transfer_Request__c/fields/CanceledReason__c.field-meta.xml
<CustomField>
    <fullName>CanceledReason__c</fullName>
    <label>Canceled Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>