force-app/main/default/objects/Listing_Transfer_Request__c/fields/CancelledOn__c.field-meta.xml
<CustomField>
    <fullName>CancelledOn__c</fullName>
    <description>This is only for when the requester cancelled the request. The rest of the possible status change dates can be calculated from the other fields, and thus not included</description>
    <label>CancelledOn(Do not use)</label>
    <type>Date</type>
</CustomField>