force-app/main/default/objects/Listing_Transfer_Request__c/fields/DestinationDecision__c.field-meta.xml
<CustomField>
    <fullName>DestinationDecision__c</fullName>
    <label>Destination Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>