force-app/main/default/objects/Listing_Transfer_Request__c/fields/DestinationDecisionBy__c.field-meta.xml
<CustomField>
    <fullName>DestinationDecisionBy__c</fullName>
    <label>Destination Decision By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>