force-app/main/default/objects/Listing_Transfer_Request__c/fields/DestinationDecisionImpersonatedBy__c.field-meta.xml
<CustomField>
    <fullName>DestinationDecisionImpersonatedBy__c</fullName>
    <label>Destination Decision Impersonated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>