force-app/main/default/objects/Listing_Transfer_Request__c/fields/DestinationDecisionOn__c.field-meta.xml
<CustomField>
    <fullName>DestinationDecisionOn__c</fullName>
    <label>Destination Decision On</label>
    <type>Date</type>
</CustomField>