force-app/main/default/objects/Listing_Transfer_Request__c/fields/DestinationOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationOfficeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Office Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listing Transfer Requests</relationshipLabel>
    <relationshipName>Listing_Transfer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>