force-app/main/default/objects/Listing_Transfer_Request__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is false and the StatusCode is one of the &quot;Awaiting&quot; ones, then we know the request expired.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>