force-app/main/default/objects/Listing_Transfer_Request__c/fields/Listing_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_ID__c</fullName>
    <label>Listing Agent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>