force-app/main/default/objects/Listing_Transfer_Request__c/fields/ListingId__c.field-meta.xml
<CustomField>
    <fullName>ListingId__c</fullName>
    <label>Listing Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>