force-app/main/default/objects/Listing_Transfer_Request__c/fields/ListingKey__c.field-meta.xml
<CustomField>
    <fullName>ListingKey__c</fullName>
    <description>I believe this is what we need to retrieve all the information about a listing, including its MLS number</description>
    <label>Listing Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>