force-app/main/default/objects/Listing_Transfer_Request__c/fields/LUSStatus__c.field-meta.xml
<CustomField>
    <fullName>LUSStatus__c</fullName>
    <label>LUS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>