force-app/main/default/objects/Listing_Transfer_Request__c/fields/LUSStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>LUSStatusMessage__c</fullName>
    <label>LUS Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>