force-app/main/default/objects/Listing_Transfer_Request__c/fields/OriginationDecision__c.field-meta.xml
<CustomField>
    <fullName>OriginationDecision__c</fullName>
    <description>Reassigned uses the Rejected status, because the essence is that the request has been rejected</description>
    <label>Origination Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>