force-app/main/default/objects/Listing_Transfer_Request__c/fields/OriginationDecisionBy__c.field-meta.xml
<CustomField>
    <fullName>OriginationDecisionBy__c</fullName>
    <label>Origination Decision By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>