force-app/main/default/objects/Listing_Transfer_Request__c/fields/OriginationDecisionImpersonatedBy__c.field-meta.xml
<CustomField>
    <fullName>OriginationDecisionImpersonatedBy__c</fullName>
    <label>Origination Decision Impersonated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>