force-app/main/default/objects/Listing_Transfer_Request__c/fields/OriginationDecisionOn__c.field-meta.xml
<CustomField>
    <fullName>OriginationDecisionOn__c</fullName>
    <label>Origination Decision On</label>
    <type>Date</type>
</CustomField>