force-app/main/default/objects/Listing_Transfer_Request__c/fields/OriginationOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>OriginationOfficeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origination Office Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listing Transfer Requests (OriginationOfficeCode)</relationshipLabel>
    <relationshipName>Listing_Transfer_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>