force-app/main/default/objects/Listing_Transfer_Request__c/fields/Reassigned_To__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned To</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Listing Transfer Requests (Reassigned To)</relationshipLabel>
    <relationshipName>Listing_Transfer_Requests_Reassigned</relationshipName>
    <type>Lookup</type>
</CustomField>