force-app/main/default/objects/Listing_Transfer_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Listing Transfer Requests</relationshipLabel>
    <relationshipName>Listing_Transfer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>