force-app/main/default/objects/Listing_Transfer_Request__c/fields/RequestedOn__c.field-meta.xml
<CustomField>
    <fullName>RequestedOn__c</fullName>
    <description>This is the same as the date the record is created</description>
    <label>Requested On</label>
    <type>Date</type>
</CustomField>