force-app/main/default/objects/Listing_Transfer_Request__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>This represents the status of this request. If the listing itself has been reassigned, we will make a note of it below with ReassignedTo</description>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>